--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,6 +11,10 @@ body{
 
 #container{
    background: #ede9cc;
+   margin: 0 auto;
+   max-width: 740px;
+   max-width: 1180px;
+
 }
 
 #topo{
@@ -27,6 +31,19 @@ body{
     width: 100%;
     height: 250px;
     background: url(../imagens/topo-imagem-principal2.png) no-repeat;
+    z-index: 1;
+}
+
+.logo a{
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    z-index: 3;
+    background: url(../imagens/logo.png) no-repeat;
+    width:151px;
+    height: 66px;
+    text-indent: -9999px;
+
 }
 
 #area-menu{
@@ -36,4 +53,38 @@ body{
     width: 450px;
     height: 250px;
     background: url(../imagens/topo-imagem-lateral.png) no-repeat;
+    z-index: 2;
+}
+
+#conteudo-menu{
+    margin-left: 90px;
+    margin-right:15px;
+    padding-top:15px;
+}
+
+#menu-locais{
+    border-bottom:  1px solid #b5ab56;
+    border-top: 1px solid #b5ab56;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 0.7em;
+    color: #8b8448;
+}
+
+#menu-locais .locais{
+    float:left;
+    line-height: 2.1em;
+}
+
+a{
+    text-decoration: none;
+    color: #8b8448;
+}
+
+a.reservar{
+    text-transform: uppercase;
+    background-color: #a29750;
+    color: #fff5b0;
+    padding: 5px 10px;
+    float:right;
 }
